--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -14,6 +14,8 @@
         <Button Name="calculateButton" Content="_Calculate" HorizontalAlignment="Left" Height="37" Margin="327,152,0,0" VerticalAlignment="Top" Width="122" Click="calculateButton_Click"/>
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
+        <Label Content="Total Charge after &#xD;&#xA;adding Delivery Charge ($25)" HorizontalAlignment="Left" Margin="34,195,0,0" VerticalAlignment="Top" Width="165" Height="48"/>
+        <TextBlock x:Name="totalChargeWithDeliveryCharge" HorizontalAlignment="Left" Margin="213,209,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="84"/>
 
 
     </Grid>
