--- a/ProductMaintenance/ProductApps/MainWindow.xaml
+++ b/ProductMaintenance/ProductApps/MainWindow.xaml
@@ -15,7 +15,9 @@
         <Button Name="clearButton" Content="C_lear" HorizontalAlignment="Left" Height="34" Margin="327,209,0,0" VerticalAlignment="Top" Width="122" Click="clearButton_Click"/>
         <Button Name="closeButton" Content="Cl_ose" HorizontalAlignment="Left" Height="34" Margin="327,264,0,0" VerticalAlignment="Top" Width="122" Click="closeButton_Click"/>
         <Label Content="Total Charge after &#xD;&#xA;adding Delivery Charge ($25)" HorizontalAlignment="Left" Margin="34,195,0,0" VerticalAlignment="Top" Width="165" Height="48"/>
-        <TextBlock x:Name="totalChargeWithDeliveryCharge" HorizontalAlignment="Left" Margin="213,209,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Width="84"/>
+        <TextBlock x:Name="totalChargeWithDeliveryCharge" HorizontalAlignment="Left" Margin="213,209,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="84"/>
+        <Label Content="Total Charge after &#xD;&#xA;adding warp charge ($5)" HorizontalAlignment="Left" Margin="34,243,0,0" VerticalAlignment="Top" Width="165"/>
+        <TextBlock x:Name="totalChargeWithWrapCharge" HorizontalAlignment="Left" Margin="213,251,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" RenderTransformOrigin="0.52,-4.598"/>
 
 
     </Grid>
